# FrankenMouse

./: LICENSE  README.md
app/: .gitignore  README.md
app/MicroMouseDashboard/: AppConstants.swift  BluetoothManager.swift  MicroMouseDashboardApp.swift  Utilities.swift
app/MicroMouseDashboard.xcodeproj/: project.pbxproj
app/MicroMouseDashboard/Feedback/: AppFeedbackBase.swift  FeedbackTopic.swift
app/MicroMouseDashboard/Feedback/ROS2/: CMakeLists.txt  MicroMouseDashboard ROS2-Bridging-Header.h  ROS2AppFeedback.h  ROS2AppFeedback.mm  ROS2AppFeedback.swift
app/MicroMouseDashboard/Views/: ConnectionStatusPage.swift  ContentView.swift  DrivePage.swift  ErrorInfoPage.swift  FeedbackDisabledPage.swift  IMUPage.swift  MainPage.swift  MazePage.swift  (+4 more)
cli/: .gitignore  CMakeLists.txt
cli/include/micromouse_cli/: ble_manager.hpp  diagnostics.hpp  macros.hpp  print_utils.hpp  prompt.hpp
cli/include/micromouse_cli/audio/: song.hpp
cli/include/micromouse_cli/commands/: clear.hpp  command.hpp  exit.hpp  help.hpp  rssi.hpp  song_play.hpp  ti84_control.hpp
cli/include/micromouse_cli/drive/: chassis_speeds.hpp
cli/include/micromouse_cli/main/: task.hpp
cli/include/micromouse_cli/options/: argument_parser.hpp  option.hpp
cli/src/: ble_manager.cpp  diagnostics.cpp  main.cpp  print_utils.cpp  prompt.cpp
cli/src/commands/: clear.cpp  command.cpp  help.cpp  rssi.cpp  song_play.cpp  ti84_control.cpp
cli/src/options/: argument_parser.cpp
firmware/: .gitignore  CMakeLists.txt  README.md  micromouse.ioc
firmware/Core/Inc/Basic/: robot.h  robot.hpp
firmware/Core/Inc/Drive/: drive_controller.hpp
firmware/Core/Inc/Navigation/: navigator.hpp
firmware/Core/Inc/Vision/: vision.hpp
firmware/Core/Src/Basic/: robot.cpp
firmware/Core/Src/Drive/: drive_controller.cpp
firmware/Core/Src/Navigation/: navigator.cpp
firmware/Core/Src/Vision/: vision.cpp
firmware/NavigationLib/: CMakeLists.txt
firmware/NavigationLib/Inc/Basic/: constants.hpp
firmware/STM32_WPAN/App/: custom_app.c  custom_stm.c  custom_stm.h
firmware/include/micromouse/: feedback_topic.h  feedback_topic.hpp  math.hpp  robot.h  robot.hpp  robot_cell_positions.hpp  singleton.hpp  subsystem.hpp
firmware/include/micromouse/audio/: audio_player.hpp  note.hpp  song.hpp
firmware/include/micromouse/drive/: drive_controller.hpp  kinematics.hpp  pid_controller.hpp  pose.hpp  speed_config.hpp  trapezoid_profile.hpp
firmware/include/micromouse/hardware/: battery_status.hpp  buttons.hpp  buzzer.hpp  component.hpp  drivetrain.hpp  feedback.hpp  imu.hpp  ir_sensors.hpp  measurements.hpp  timer.hpp
firmware/include/micromouse/maze/: cell.hpp  coordinate.hpp  direction.hpp  maze.hpp  maze_dimensions.hpp
firmware/include/micromouse/navigation/: navigator.hpp
firmware/include/micromouse/solver/: flood_fill.hpp  solver.hpp
firmware/include/micromouse/vision/: vision.hpp
firmware/lib/: robot.cpp
firmware/lib/audio/: audio_player.cpp  songs.cpp
firmware/lib/drive/: drive_controller.cpp  kinematics.cpp  pid_controller.cpp  trapezoid_profile.cpp
firmware/lib/hardware/: battery_status.cpp  buttons.cpp  buzzer.cpp  drivetrain.cpp  feedback.cpp  imu.cpp  ir_sensors.cpp  measurements.cpp  timer.cpp
firmware/lib/maze/: maze.cpp
firmware/lib/navigation/: navigator.cpp
firmware/lib/solver/: flood_fill.cpp
firmware/lib/vision/: vision.cpp
firmware/platform/mouse_v2/: CMakeLists.txt  micromouse.ioc
firmware/platform/mouse_v2/Core/Inc/: app_conf.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
firmware/platform/mouse_v2/Core/Inc/hardware/: buttons_impl.hpp  drivetrain_impl.hpp  imu_impl.hpp  ir_sensors_impl.hpp
firmware/platform/mouse_v2/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
firmware/platform/mouse_v2/Core/Src/hardware/: buttons_impl.cpp  buzzer_impl.cpp  drivetrain_impl.cpp  encoder.cpp  feedback_impl.cpp  imu_impl.cpp  ir_sensors_impl.cpp  timer_impl.cpp
firmware/platform/mouse_v2/STM32_WPAN/App/: app_ble.c  custom_app.c  custom_stm.c  custom_stm.h
firmware/platform/mouse_v3/: CMakeLists.txt  micromouse.ioc
firmware/platform/mouse_v3/Core/Inc/: app_conf.h  main.h  stm32wbxx_hal_conf.h  stm32wbxx_it.h
firmware/platform/mouse_v3/Core/Inc/hardware/: buzzer_impl.hpp  drivetrain_impl.h  drivetrain_impl.hpp  encoder.hpp  feedback_impl.hpp  imu_impl.hpp  timer_impl.hpp
firmware/platform/mouse_v3/Core/Src/: main.c  stm32wbxx_hal_msp.c  stm32wbxx_it.c
firmware/platform/mouse_v3/Core/Src/hardware/: drivetrain_impl.cpp  feedback_impl.cpp  imu_impl.cpp  measurements_impl.cpp
firmware/platform/mouse_v3/STM32_WPAN/App/: app_ble.c  custom_app.c  custom_stm.c  custom_stm.h
firmware/platform/mouse_v3/cmake/: gcc-arm-none-eabi.cmake
firmware/platform/mouse_v3/cmake/stm32cubemx/: CMakeLists.txt
firmware/platform/simulation/: CMakeLists.txt
firmware/platform/simulation/include/simulation/hardware/: buttons_impl.hpp  drivetrain_impl.hpp  feedback_impl.hpp  ir_sensors_impl.hpp  timer_impl.hpp
firmware/platform/simulation/src/: main.cpp
firmware/platform/simulation/src/hardware/: buttons_impl.cpp  drivetrain_impl.cpp  feedback_impl.cpp  ir_sensors_impl.cpp  measurements_impl.cpp  timer_impl.cpp
firmware/tests/: CMakeLists.txt  test_maze.cpp  test_trapezoid_profile.cpp
simulation/mouse_v3/: .gitignore  CMakeLists.txt  README.md
simulation/mouse_v3/include/simulator/: feedback.hpp  maze.hpp  menu.hpp  micromouse.hpp  wall.hpp
simulation/mouse_v3/lib/: feedback.cpp  maze.cpp  menu.cpp  micromouse.cpp  register_types.cpp  wall.cpp
simulation/mouse_v3/mazes/: maze.maze
simulation/mouse_v3/simulator/: icon.png.import  main.tscn  micromouse.tscn  post.tscn  project.godot  wall.tscn  wall_clickable.tscn
simulation/mouse_v3/simulator/icons/: 1-solid.svg.import  2-solid.svg.import  bars-solid.svg.import  hand-wave.svg.import  rotate-right-solid.svg.import
simulation/mouse_v3/simulator/materials/: eyes.tres  floor.tres
simulation/mouse_v3/simulator/models/: micromouse.blend.import
ti84_controller/: .gitignore  Makefile  README.md
ti84_controller/src/: main.c
(+19 files in other folders)
